crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__comp_clause_recovery_2.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(\"[for i in [1,2,3]]\")"
---
Node {
    node: List(
        ListExpr {
            elts: [],
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 18,
}
